fixed service details truncation

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,11 +2,17 @@
     margin-bottom: 20rem;
 }
 
-.card-text {
+.descriptionText {
     display: -webkit-box;
-    -webkit-line-clamp: 3; 
-    line-clamp: 3;
-    -webkit-box-orient: vertical;  
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-    min-height: 4.5em;
+
+    font-size: 1rem;          
+    color: #4b5563;            
+    line-height: 1.5;           
+    margin-bottom: 1rem;    
+
+    min-height: 4.5em; 
 }
